add secondary info

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <title>Résumé</title>
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./assets/styles/styles.css">
   </head>
   <body>
     <main>
@@ -12,7 +13,9 @@
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
-                <!-- Avatar -->
+                <div class="avatar-wrapper">
+                  <div class="img-acu"></div>
+                </div>
               </div>
               <div class="thirteen wide column">
                 <div class="stackable grid">
@@ -66,16 +69,168 @@
             </div>
             <div class="row">
               <div class="ten wide column">
-                <!-- Experience -->
+                <section>
+                  <h3>Experience</h3>
+                  <h4>President of the US</h4>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
+                    <i>USA</i>
+                  </div>
+                  <ul class="timeline">
+                    <li class="highlighted">
+                      <p><strong><em> January 2017 – present</em></strong></p>
+                      <ul>
+                        <li>Being president for all Americans.</li>
+                        <li>Rebuilding US nation and renewing the American dream.</li>
+                        <li>Creating a great economic plan.</li>
+                      </ul>
+                  </ul>
+                  <h4>President</h4>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
+                    <i>The trump organization</i>
+                  </div>
+                  <ul class="timeline">
+                    <li class="highlighted">
+                     
+                      <p><strong><em> 1971 – ongoing</em></strong></p>
+                      <ul>
+                        <li>Built the Grand Hyatt Hotel in Manhatten.</li>
+                        <li>Built the stunning 58-story Trump Tower in Midtown Manhattan</li>
+                        <li>Operate the classic 25-story luxury condominium building Trump Park Avenue.</li>
+                        <li>Operates 18 luxury golf courses in premium destinations across the world.</li>
+                      </ul>
+                  </ul>
+                  <h4>Owner</h4>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
+                    <i>Trump Model Management</i>
+                  </div>
+                  <ul class="timeline">
+                    <li class="highlighted">
+                      <p><strong><em> 1999 – ongoing</em></strong></p>
+                      <ul>
+                        <li>Brough over 200 stunning and talented models from around the world to work and build careers in the USA.</li>
+                      </ul>
+                  </ul>
+                  <h4>Television and Film</h4>
+                  <div>
+                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24"><path d="M12 0c-4.198 0-8 3.403-8 7.602 0 4.198 3.469 9.21 8 16.398 4.531-7.188 8-12.2 8-16.398 0-4.199-3.801-7.602-8-7.602zm0 11c-1.657 0-3-1.343-3-3s1.343-3 3-3 3 1.343 3 3-1.343 3-3 3z"/></svg>
+                    <i>Numerous Media</i>
+                  </div>
+                  <ul class="timeline">
+                    <li class="highlighted">
+                      <p><strong><em> 1985 – 2015</em></strong></p>
+                      <ul>
+                        <li>I have appeared on 23 films and movies from The Jeffersons to Saturday Night Live.</li>
+                      </ul>
+                  </ul>
+                  <div class="fat divider"></div>
+                  <h4></h4>
+                    <ul class="timeline">
+                      <li class="highlighted">
+                        <p><em>14<sup>th</sup> June 1946</em></p>
+                        <p><strong>Born</strong> in <strong><a href="https://www.google.com/maps/place/New+York,+NY,+USA/@40.5840229,-74.4134072,9.25z/data=!4m5!3m4!1s0x89c24fa5d33f083b:0xc80b8f06e177fe62!8m2!3d40.7127753!4d-74.0059728?hl=en" rel="external">Queens, New York City</a></strong></p>
+                      </li>
+                    </ul>
+                </section>
               </div>
               <div class="six wide column">
-                <!-- Languages -->
-                <!-- Skills -->
-                <!-- Character -->
-                <!-- Likes -->
-                <!-- Dislikes -->
-                <!-- Wants -->
-                <!-- Education -->
+                <section>
+                  <h3>Languages&#127988;&#8205;&#9760;&#65039;</h3>
+                  <p class="tags small"> <span class="language" lang="en">&#x1f1fa;&#x1f1f8; ENGLISH</span></p>
+                </section>
+                <section>
+                  <h3>Skills&#128170;</h3>
+                  <p class="tags small">LOCKER ROOM TALK</p>
+                  <p class="tags small">HAVING THE BEST WORDS</p>
+                  <p class="tags small">USING NUCLEAR WEAPONS</p>
+                  <p class="tags small">MAKING AMERICA GREAT AGAIN</p>
+                  <p class="tags small">KEEPING TOUPEE ATTACHED</p>
+                  <p class="tags small">LATE NIGHT TWEETING</p>
+                </section>
+                <section>
+                  <h3>Likes&#x1f603;</h3>
+                  <p class="tags small">TO BE PRESIDENT</p>
+                </section>
+                <section>
+                  <h3>Dislikes&#x1f61e;</h3>
+                  <p class="tags small"><span class="nowrap">JOSEPH BIDEN</p>
+                </section>
+                <section>
+                  <h3>Wants&#x1f97a;</h3>
+                  <p class="tags small bulleted"><span class="tag">MAKE AMERICA GREAT AGAIN</p>
+                </section>
+                <section>
+                  <h3>Most proud of	&#129321;</h3>
+                  <li>
+                    <ul>
+                      <li class="details">
+                        <input type="checkbox">
+                        <label class="summary">
+                          <strong>Winning</strong>
+                        </label>
+                        <div>
+                          <ul>
+                            I've been doing it all my life. At this point it just comes naturally.
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                    <ul>
+                      <li class="details">
+                        <input type="checkbox">
+                        <label class="summary">
+                          <strong>Negotiating</strong>
+                        </label>
+                        <div>
+                          <ul>
+                            I wrote a best-selling book on deal making.
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                    <ul>
+                      <li class="details">
+                        <input type="checkbox">
+                        <label class="summary">
+                          <strong>Intelligence</strong>
+                        </label>
+                        <div>
+                          <ul>
+                            I see business opportunities where no one else does.
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                    <ul>
+                      <li class="details">
+                        <input type="checkbox">
+                        <label class="summary">
+                          <strong>Political success</strong>
+                        </label>
+                        <div>
+                          <ul>
+                            I became the first true outsider to win a major party nomination in modern political history.
+                          </ul>
+                        </div>
+                      </li>
+                    </ul>
+                  </li>
+                </section>
+                <section>
+                  <h3>Education&#128218;</h3>
+                  <ul class="timeline">
+                    <li>
+                      <div><em>1964 &ndash; 1968</em></div>
+                      <div><strong>B.S. in Economics</strong> at <a href="https://www.wharton.upenn.edu/" rel="external"><strong>The univercity of Pennsylvania Wharton School of Finance and Commerce</strong></a></div>
+                    </li>
+                    <li>
+                      <div><em>1964 &ndash; 1966</em></div>
+                      <div><strong>2 Year's - Transferrable studies</strong> at <a href="https://www.fordham.edu/" rel="external"><strong>Fordham Univercity</strong></a></div>
+                    </li>
+                  </ul>
+                </section>
                 <!-- Articles -->
               </div>
             </div>
