add .ico, changed folder structure

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="subject" content="This is just a résumé.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Donald Trump Résumé</title>
+    <link rel="shortcut icon" href="./assets/images/cv.ico" type="image/x-icon">
     <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
   </head>
