minor fixes in styles, changed intro

--- a/index.html
+++ b/index.html
@@ -10,13 +10,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Donald Trump Résumé</title>
     <link rel="shortcut icon" href="./assets/images/cv.ico" type="image/x-icon">
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./assets/styles/base.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
   </head>
   <body>
     <main>
       <article>
-        <div class="page" style="border-color: midnightblue;">
+        <div class="page" style="border-color: rgb(28, 28, 59);">
           <div class="stackable grid">
             <div class="row">
               <div class="three wide center aligned column">
@@ -61,9 +61,8 @@
                   </div>
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
-                    <p>&mdash; Make America great again!<strong style="margin-left: 0.0625em;">*</strong> </p>
-                    <a href="https://blog.twitter.com/en_us/topics/company/2020/suspension.html" rel="author" class="twitter">
-                      <p style="opacity: 0.75;"><strong style="margin-right: 0.0625em;">- give me back my twitter!</strong></p>
+                    <p>&mdash; I am only one man in the world who have access to the nuclear weapon keys but still doesn't have access to the own social networks.&#x1f61e; </p>
+                      <p class="opacity-footer"><i>- make America great again!</i></p>
                     </a>
                   </div>
                 </div>
@@ -99,7 +98,6 @@
                   </div>
                   <ul class="timeline">
                     <li class="highlighted">
-                     
                       <p><strong><em> 1971 – ongoing</em></strong></p>
                       <ul>
                         <li>Built the Grand Hyatt Hotel in Manhatten.</li>
@@ -238,7 +236,6 @@
                     </li>
                   </ul>
                 </section>
-                <!-- Articles -->
               </div>
             </div>
           </div>
