add footer, header, minor fixes in styles

--- a/index.html
+++ b/index.html
@@ -2,18 +2,23 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
     <meta name="description" content="My very own personal website.">
     <meta name="google" content="notranslate">
     <meta name="googlebot" content="index,follow">
     <meta name="robots" content="index,follow">
     <meta name="subject" content="This is just a résumé.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta property="og:type" content="website">
     <title>Donald Trump Résumé</title>
     <link rel="shortcut icon" href="./assets/images/cv.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/base.css">
     <link rel="stylesheet" href="./assets/styles/styles.css">
   </head>
   <body>
+    <header>
+      <div class="credits custom-color"><i>This is <a href="https://study.binary-studio.com/" rel="external"><strong>Binary Studio Winter Academy</strong></a> Header</i></div>
+    </header>
     <main>
       <article>
         <div class="page" style="border-color: rgb(28, 28, 59);">
@@ -242,5 +247,8 @@
         </div>
       </article>
     </main>
+    <footer>
+      <div class="credits custom-color"><i>This is <a href="https://study.binary-studio.com/" rel="external"><strong>Binary Studio Winter Academy</strong></a> Footer</i></div>
+    </footer>
   </body>
 </html>
