--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <meta name="subject" content="This is just a résumé.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
+    <base href="https://valeriypetryna.github.io/homepage/">
     <title>Donald Trump Résumé</title>
     <link rel="shortcut icon" href="./assets/images/cv.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/base.css">
