Fixed accessibility issues

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <div class="stackable grid">
                   <div class="sixteen wide column">
                     <h1 class="name">Donald Trump</h1>
-                    <div class="job">45ht President of the United States</div>
+                    <div class="job"><i>45ht President of the United States</i></div>
                     <ul class="contacts">
                       <li>
                         <a href="https://www.fb.com/DonaldTrump" rel="author" class="facebook">
@@ -68,7 +68,7 @@
                   <div class="sixteen wide column">
                     <h2>Résumé</h2>
                     <p>&mdash; I am only one man in the world who have access to the nuclear weapon keys but still doesn't have access to the own social networks.&#x1f61e; </p>
-                      <p class="opacity-footer"><i>- make America great again!</i></p>
+                      <p class="quote-intro"><i>- make America great again!</i></p>
                     </a>
                   </div>
                 </div>
@@ -90,7 +90,7 @@
                   </div>
                   <ul class="timeline">
                     <li class="highlighted">
-                      <p><strong><em> January 2017 – present</em></strong></p>
+                      <p><strong><em> January 2017 – present ??</em></strong></p>
                       <ul>
                         <li>Being president for all Americans.</li>
                         <li>Rebuilding US nation and renewing the American dream.</li>
@@ -174,60 +174,58 @@
                 </section>
                 <section>
                   <h3>Most proud of	&#129321;</h3>
-                  <li>
                     <ul>
                       <li class="details">
-                        <input type="checkbox">
-                        <label class="summary">
+                        <input type="checkbox" id="proud">
+                        <label for="proud" class="summary">
                           <strong>Winning</strong>
                         </label>
                         <div>
-                          <ul>
+                          <p>
                             I've been doing it all my life. At this point it just comes naturally.
-                          </ul>
+                          </p>
                         </div>
                       </li>
                     </ul>
                     <ul>
                       <li class="details">
-                        <input type="checkbox">
-                        <label class="summary">
+                        <input type="checkbox" id="proud2">
+                        <label for="proud2" class="summary">
                           <strong>Negotiating</strong>
                         </label>
                         <div>
-                          <ul>
+                          <p>
                             I wrote a best-selling book on deal making.
-                          </ul>
+                          </p>
                         </div>
                       </li>
                     </ul>
                     <ul>
                       <li class="details">
-                        <input type="checkbox">
-                        <label class="summary">
+                        <input type="checkbox" id="proud3">
+                        <label for="proud3" class="summary">
                           <strong>Intelligence</strong>
                         </label>
                         <div>
-                          <ul>
+                          <p>
                             I see business opportunities where no one else does.
-                          </ul>
+                          </p>
                         </div>
                       </li>
                     </ul>
                     <ul>
                       <li class="details">
-                        <input type="checkbox">
-                        <label class="summary">
+                        <input type="checkbox" id="proud4">
+                            <label for="proud4" class="summary">
                           <strong>Political success</strong>
                         </label>
                         <div>
-                          <ul>
+                          <p>
                             I became the first true outsider to win a major party nomination in modern political history.
-                          </ul>
+                          </p>
                         </div>
                       </li>
                     </ul>
-                  </li>
                 </section>
                 <section>
                   <h3>Education&#128218;</h3>
