--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta name="subject" content="This is just a résumé.">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta property="og:type" content="website">
-    <!-- <base href="https://valeriypetryna.github.io/homepage/"> -->
     <title>Donald Trump Résumé</title>
     <link rel="shortcut icon" href="./assets/images/cv.ico" type="image/x-icon">
     <link rel="stylesheet" href="./assets/styles/base.css">
@@ -69,7 +68,6 @@
                     <h2>Résumé</h2>
                     <p>&mdash; I am only one man in the world who have access to the nuclear weapon keys but still doesn't have access to the own social networks.&#x1f61e; </p>
                       <p class="quote-intro"><i>- make America great again!</i></p>
-                    </a>
                   </div>
                 </div>
               </div>
@@ -137,7 +135,7 @@
                       </ul>
                   </ul>
                   <div class="fat divider"></div>
-                  <h4></h4>
+                  <p></p>
                     <ul class="timeline">
                       <li class="highlighted">
                         <p><em>14<sup>th</sup> June 1946</em></p>
@@ -166,11 +164,11 @@
                 </section>
                 <section>
                   <h3>Dislikes&#x1f61e;</h3>
-                  <p class="tags small"><span class="nowrap">JOSEPH BIDEN</p>
+                  <p class="tags small"><span class="nowrap">JOSEPH BIDEN</span></p>
                 </section>
                 <section>
                   <h3>Wants&#x1f97a;</h3>
-                  <p class="tags small bulleted"><span class="tag">MAKE AMERICA GREAT AGAIN</p>
+                  <p class="tags small bulleted"><span class="tag">MAKE AMERICA GREAT AGAIN</span></p>
                 </section>
                 <section>
                   <h3>Most proud of	&#129321;</h3>
